# pandas-sports

./: .env.example  .gitignore  .travis.yml  Cargo.toml  Pipfile  README.md  data-format.md  openapi.yaml  requirements.txt  test-data.yaml  test.py
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2019-09-27-201014_create_users/: up.sql
migrations/2019-10-10-013412_create_teams/: up.sql
migrations/2019-10-10-014400_create_matches/: up.sql
migrations/2019-10-10-100000_create_matches/: up.sql
migrations/2019-10-10-200000_create_players/: down.sql  up.sql
migrations/2019-10-10-202537_create_rosters/: down.sql  up.sql
migrations/2019-10-10-300000_create_basketball/: down.sql  up.sql
migrations/2019-10-10-300001_create_baseball/: down.sql  up.sql
migrations/2019-10-10-300002_create_football/: down.sql  up.sql
migrations/2019-10-10-300003_create_hockey/: down.sql  up.sql
migrations/2019-10-10-300004_create_volleyball/: down.sql  up.sql
migrations/2019-10-10-300005_create_soccer/: down.sql  up.sql
migrations/2019-10-10-400000_create_matches/: down.sql  up.sql
src/: error.rs  hash.rs  main.rs  models.rs  schema.rs  secret.rs  user.rs
src/models/: api.rs  mod.rs  sql.rs
src/resource/: filter.rs  login.rs  logout.rs  mod.rs  order.rs  register.rs
src/resource/matches/: create_match.rs  delete.rs  delete_match.rs  get.rs  get_match.rs  list_matches.rs  mod.rs  post.rs
src/resource/players/: get.rs  mod.rs
src/resource/teams/: create_team.rs  delete.rs  delete_team.rs  get.rs  get_team.rs  list_teams.rs  mod.rs  post.rs
