[package]
name = "pandas-sports"
version = "0.1.0"
authors = ["Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.14"
env_logger = "0.7"
failure = "0.1"
futures = "0.1"
log = "0.4"
nom = "5.0"
serde = "1.0"
serde_json = "1.0"